implement insert_many and revise BulkWriteResult
BulkWriteResult now has the 'upserted' field again as an array
of documents as returned by the server.  The 'upserted_ids' field
is now a hash reference for consistency with the CRUD spec.
'upserted_ids' is generated lazily from 'upserted'.

The 'inserted' and 'inserted_ids' fields do the same thing for
insertions rather the upserts.

With these changes, 'insert_many' was implemented using the Bulk API
behind the scenes.

--- a/lib/MongoDB/Upgrading.pod
+++ b/lib/MongoDB/Upgrading.pod
@@ -194,6 +194,17 @@ to ensure authentication succeeds (or else an exception is thrown).
 In a future release, this method will be removed entirely and
 authentication options will only be allowed as constructor arguments.
 
+=head2 Bulk insertion
+
+Insertion via the bulk API will insert an C<_id> into the original
+document if one does not exist.  Previous documentation was not specific
+whether this was the case or if the C<_id> was added to a clone.
+
+As the regular insertion methods from L<MongoDB::Collection> modified the
+original, that was adopted for the Bulk API as well.
+
+All methods are now specifically documented as modifying the original.
+
 =head2 Bulk write results
 
 The bulk write results class has been renamed to
